feat: add additional roles to controller
