# src/main/java/com/kcm/msp/dev/app2/development/prototype/microservice/service/UserService.java
@@ -6,6 +6,8 @@ import java.util.List;
 
 public interface UserService {
 
+  User showUserById(String id);
+
   List<User> listUsers(Integer limit);
 
   User createUser(CreateUserRequest request);
